# wasm-rust-basic-game

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  types.d.ts
src/components/Controls/: Controls.tsx
src/components/Info/: Info.module.css  Info.tsx
src/components/Stage/: Stage.module.css  Stage.tsx  constants.ts  index.ts  types.ts  utils.ts
src/crate/: Cargo.toml
src/crate/src/: lib.rs
src/worklets-paint/: grid.properties.ts  grid.ts  index.ts
